decimo commit caraioooo, eu acho

--- a/html/index.html
+++ b/html/index.html
@@ -16,9 +16,9 @@
             <div class="OpçõesBarra"><a href="https://www.google.com.br/">Produtos</a></div>
             <div class="OpçõesBarra"><a href="https://www.google.com.br/">Categorias</a></div>
             <div class="OpçõesBarra"><a href="https://www.google.com.br/">Carrinho</a></div>
-            <div class="OpçõesBarra"><a href="../php/cadastro.php">Login</a></div>
+            <div class="OpçõesBarra"><a href="../php/index/cadastro.php">Login</a></div>
         </div>
-    
+    ''
     <div class="PrimeiraParte">
         <h1 class="animação">Tecnologia e Qualidade Você <br>Encontra aqui</h1>
         <div class="animação2">
